--- a/latex/classEulerEvaluator.tex
+++ b/latex/classEulerEvaluator.tex
@@ -24,9 +24,7 @@ Inheritance diagram for Euler\+Evaluator\+:\begin{figure}[H]
 void {\bfseries Print\+Equations} ()
 \item 
 \mbox{\hyperlink{classNetworkState}{Network\+State}} \mbox{\hyperlink{classEulerEvaluator_a27cbe250bcb51149366342f2f81d5aec}{Get\+Next\+Network\+State}} () override
-\begin{DoxyCompactList}\small\item\em Inherited function from the evaluator class. \end{DoxyCompactList}\item 
-double \mbox{\hyperlink{classEulerEvaluator_a423ab63f1b9becc8afc452bb832727db}{Kahan\+Summation}} (std\+::initializer\+\_\+list$<$ double $>$ numbers, double \&c)
-\end{DoxyCompactItemize}
+\begin{DoxyCompactList}\small\item\em Inherited function from the evaluator class. \end{DoxyCompactList}\end{DoxyCompactItemize}
 \doxysubsection*{Public Attributes}
 \begin{DoxyCompactItemize}
 \item 
@@ -37,10 +35,7 @@ double \mbox{\hyperlink{classEulerEvaluator_a1cdbb0ca066892cf3df4f339036e0b53}{s
 \begin{DoxyCompactList}\small\item\em Stepsize in regards to Euler Method, can be changed when given as an argument. \end{DoxyCompactList}\item 
 \mbox{\Hypertarget{classEulerEvaluator_a777980e8b3951544ec18d5aaf373d2aa}\label{classEulerEvaluator_a777980e8b3951544ec18d5aaf373d2aa}} 
 double \mbox{\hyperlink{classEulerEvaluator_a777980e8b3951544ec18d5aaf373d2aa}{threshold}} = 0.\+0001
-\begin{DoxyCompactList}\small\item\em Threshold for when evaluation stops. \end{DoxyCompactList}\item 
-\mbox{\Hypertarget{classEulerEvaluator_a2b4393f2908bf34a98445b8fc58470ff}\label{classEulerEvaluator_a2b4393f2908bf34a98445b8fc58470ff}} 
-bool {\bfseries kahan} = true
-\end{DoxyCompactItemize}
+\begin{DoxyCompactList}\small\item\em Threshold for when evaluation stops. \end{DoxyCompactList}\end{DoxyCompactItemize}
 \doxysubsection*{Private Member Functions}
 \begin{DoxyCompactItemize}
 \item 
@@ -52,9 +47,6 @@ void {\bfseries Initialize\+Equation\+Parts} ()
 \item 
 \mbox{\Hypertarget{classEulerEvaluator_ab7be9873cbe38077d13cfe71de9566a4}\label{classEulerEvaluator_ab7be9873cbe38077d13cfe71de9566a4}} 
 equation\+\_\+set {\bfseries equation\+Parts}
-\item 
-\mbox{\Hypertarget{classEulerEvaluator_a8a1b6ae49fd044ec2a7246814e36015e}\label{classEulerEvaluator_a8a1b6ae49fd044ec2a7246814e36015e}} 
-std\+::map$<$ std\+::string, double $>$ {\bfseries errors}
 \end{DoxyCompactItemize}
 \doxysubsection*{Additional Inherited Members}
 
@@ -99,44 +91,25 @@ This function implements the Euler method and gets the next state of the network
 \DoxyCodeLine{44     \mbox{\hyperlink{classEulerEvaluator_a06cced767315ae48d0b079fa3491d32b}{iterations}}++;}
 \DoxyCodeLine{45     \textcolor{keyword}{auto} oldState = mState.DeepCopy();}
 \DoxyCodeLine{46     \textcolor{keywordflow}{for} (\textcolor{keyword}{auto} \&specie : equationParts) \{}
-\DoxyCodeLine{47         \textcolor{keywordtype}{double} c = 0;}
-\DoxyCodeLine{48         \textcolor{keywordtype}{double} diff = 0;}
-\DoxyCodeLine{49         \textcolor{keywordflow}{for} (equation\_term \&term : specie.second) \{}
-\DoxyCodeLine{50             \textcolor{keywordtype}{double} change = term.first;}
-\DoxyCodeLine{51             \textcolor{keywordflow}{for} (\textcolor{keyword}{auto} \&reactant : term.second) \{}
-\DoxyCodeLine{52                 change *= pow(oldState[reactant.first], reactant.second);}
-\DoxyCodeLine{53             \}}
-\DoxyCodeLine{54             diff = \mbox{\hyperlink{classEulerEvaluator_a423ab63f1b9becc8afc452bb832727db}{KahanSummation}}(\{diff, change\}, c);}
-\DoxyCodeLine{55             \textcolor{keywordflow}{if} (!kahan \&\& c != 0)}
-\DoxyCodeLine{56                 std::cout << \textcolor{stringliteral}{"Erors: "} << c << std::endl;}
-\DoxyCodeLine{57         \}}
-\DoxyCodeLine{58         mState[specie.first] = \mbox{\hyperlink{classEulerEvaluator_a423ab63f1b9becc8afc452bb832727db}{KahanSummation}}(\{mState[specie.first], diff * \mbox{\hyperlink{classEulerEvaluator_a1cdbb0ca066892cf3df4f339036e0b53}{step}}\},}
-\DoxyCodeLine{59                                                                                     errors[specie.first]);}
-\DoxyCodeLine{60         \textcolor{keywordflow}{if} (errors[specie.first] != 0)}
-\DoxyCodeLine{61             std::cout << \textcolor{stringliteral}{"Specie Error: "} << errors[specie.first] << std::endl;}
-\DoxyCodeLine{62     \}}
-\DoxyCodeLine{63     mState.time = \mbox{\hyperlink{classEulerEvaluator_a1cdbb0ca066892cf3df4f339036e0b53}{step}} * \mbox{\hyperlink{classEulerEvaluator_a06cced767315ae48d0b079fa3491d32b}{iterations}};}
-\DoxyCodeLine{64     finished = (oldState.Diff(mState) < \mbox{\hyperlink{classEulerEvaluator_a777980e8b3951544ec18d5aaf373d2aa}{threshold}});}
-\DoxyCodeLine{65     \textcolor{keywordflow}{return} mState;}
-\DoxyCodeLine{66 \}}
+\DoxyCodeLine{47         \textcolor{keywordtype}{double} diff = 0;}
+\DoxyCodeLine{48         \textcolor{keywordflow}{for} (equation\_term \&term : specie.second) \{}
+\DoxyCodeLine{49             \textcolor{keywordtype}{double} change = term.first;}
+\DoxyCodeLine{50             \textcolor{keywordflow}{for} (\textcolor{keyword}{auto} \&reactant : term.second) \{}
+\DoxyCodeLine{51                 change *= pow(oldState[reactant.first], reactant.second);}
+\DoxyCodeLine{52             \}}
+\DoxyCodeLine{53             diff += change;}
+\DoxyCodeLine{54         \}}
+\DoxyCodeLine{55         mState[specie.first] += diff * \mbox{\hyperlink{classEulerEvaluator_a1cdbb0ca066892cf3df4f339036e0b53}{step}};}
+\DoxyCodeLine{56     \}}
+\DoxyCodeLine{57     mState.time = \mbox{\hyperlink{classEulerEvaluator_a1cdbb0ca066892cf3df4f339036e0b53}{step}} * \mbox{\hyperlink{classEulerEvaluator_a06cced767315ae48d0b079fa3491d32b}{iterations}};}
+\DoxyCodeLine{58     finished = (oldState.Diff(mState) < \mbox{\hyperlink{classEulerEvaluator_a777980e8b3951544ec18d5aaf373d2aa}{threshold}});}
+\DoxyCodeLine{59     \textcolor{keywordflow}{return} mState;}
+\DoxyCodeLine{60 \}}
 \end{DoxyCodeInclude}
 After each iteration the finished flag is evaluated in regards to the threshold. The m\+State.\+time property represents this mentioned t\+\_\+value 
 
 Implements \mbox{\hyperlink{classEvaluator}{Evaluator}}.
 
-\mbox{\Hypertarget{classEulerEvaluator_a423ab63f1b9becc8afc452bb832727db}\label{classEulerEvaluator_a423ab63f1b9becc8afc452bb832727db}} 
-\index{EulerEvaluator@{EulerEvaluator}!KahanSummation@{KahanSummation}}
-\index{KahanSummation@{KahanSummation}!EulerEvaluator@{EulerEvaluator}}
-\doxysubsubsection{\texorpdfstring{KahanSummation()}{KahanSummation()}}
-{\footnotesize\ttfamily double Euler\+Evaluator\+::\+Kahan\+Summation (\begin{DoxyParamCaption}\item[{std\+::initializer\+\_\+list$<$ double $>$}]{numbers,  }\item[{double \&}]{c }\end{DoxyParamCaption})}
-
-Kahan summation function to reduce numerical error of summation of floats. 
-\begin{DoxyParams}{Parameters}
-{\em numbers} & is a list of double which contain the numbers to be summed. \\
-\hline
-{\em c} & is a variable to compensate for the summation errors. \\
-\hline
-\end{DoxyParams}
 
 
 \doxysubsection{Member Data Documentation}
